2010-03-24  Christian Kuhn  <lolli@schwarzbu.ch>

	* Added feature #9289: Missing index for deleting outdated session data in fe_session_data
	* Fixed bug #9769: Organisation in mail header should be Organization

2010-03-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13909: htmlArea RTE: Extjize the default non-TYPO3 image dialogue
	* Follow-up to feature #13878: htmlArea RTE: Extjize the default non-TYPO3 link dialogue
	* Follow-up to feature #13785: htmlArea RTE: Extjize Find & Replace dialogue

2010-03-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13811: Missing formHandler in ExtDirect API (Thanks to Stefan Galinski)

2010-03-23  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #9229: indexing of records containing HTML leads to concatenated words
	* Fixed bug #8933: icons in indexed search modfunc1 are not skinned

2010-03-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13878: htmlArea RTE: Extjize the default non-TYPO3 link dialogue
	* Fixed bug #13887: htmlArea RTE: Table dialogues may raise js error
	* Added feature #13888: htmlArea RTE: Add border around toolbar
	* Follow-up to feature #13796: htmlArea RTE: Extjize Remove format dialogue
	* Added feature #13889: htmlArea RTE: Cleanup some unused scripts (Quick Tag)

2010-03-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13870: htmlArea RTE: Extjize the spell checker
	* Fixed bug #12845: RTE link query parameters cannot contain "id="

2010-03-20  Andreas Otto  <andreas@otto-hanika.de>

	* Fixed bug #13871: Field data_page_type in table index_phash is too small.

2010-03-18  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12434: Name attribute in search form - invalid XHTML strict
	* Fixed bug #10392: Indexed search does not use config.fileTarget for files

2010-03-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13739: "Show" clickmenu in page tree does not work for mount pages